fix: updated getPosition and createTopic controllers
